almost done with proj 1

--- a/proj1/Makefile
+++ b/proj1/Makefile
@@ -4,9 +4,13 @@ C_DEBUG_FLAGS = -g
 
 all:
 	$(CC) userlib.c $(C_FLAGS) -c -o userlib.o
-	$(CC) auth.c $(C_FLAGS) -o auth userlib.o
+	$(CC) domainlib.c $(C_FLAGS) -c -o domainlib.o
+	$(CC) typelib.c $(C_FLAGS) -c -o typelib.o
+	$(CC) auth.c $(C_FLAGS) -o auth userlib.o domainlib.o typelib.o
 debug:
-	$(CC) $(C_FLAGS) $(C_DEBUG_FLAGS) -c -o userlib.o
-	$(CC) $(C_FLAGS) $(C_DEBUG_FLAGS) -o auth userlib.o
+	$(CC) userlib.c $(C_FLAGS) $(C_DEBUG_FLAGS) -c -o userlib.o
+	$(CC) domainlib.c $(C_FLAGS) $(C_DEBUG_FLAGS) -c -o domainlib.o
+	$(CC) typelib.c $(C_FLAGS) $(C_DEBUG_FLAGS) -c -o typelib.o
+	$(CC) auth.c $(C_FLAGS) $(C_DEBUG_FLAGS) -o auth userlib.o domainlib.o
 clean:
 	rm auth *.o *.txt
