--- a/proj4/Makefile
+++ b/proj4/Makefile
@@ -1,7 +1,9 @@
 all: pow-create pow-check
 
+.PHONY: pow-create
 pow-create:
-	gcc pow-create.c -o pow-create	
+	gcc pow-create.c -o pow-create -lcrypto -lpthread
+
 pow-check:
 
 clean:
