--- a/proj4/Makefile
+++ b/proj4/Makefile
@@ -1,10 +1,11 @@
 all: pow-create pow-check
 
-.PHONY: pow-create
+.PHONY: pow-create pow-check
 pow-create:
 	gcc pow-create.c -o pow-create -lcrypto -lpthread
 
 pow-check:
+	gcc pow-check.c -o pow-check -lcrypto
 
 clean:
-	rm -f pow-create
+	rm -f pow-create pow-check
